Test rapide: réduit à 2 catégories (commerce et restaurant)

--- a/cevennes-connect/admin-import-google.html
+++ b/cevennes-connect/admin-import-google.html
@@ -115,12 +115,13 @@
         const RADIUS = 5000;
 
         const CATEGORIES_MAP = {
-            commerce: ['store', 'supermarket', 'convenience_store', 'shopping_mall'],
-            restaurant: ['restaurant', 'cafe', 'bakery', 'meal_takeaway'],
-            artisan: ['plumber', 'electrician', 'locksmith', 'roofing_contractor'],
-            therapeute: ['spa', 'beauty_salon', 'hair_care', 'physiotherapist'],
-            service: ['car_repair', 'bank', 'gas_station', 'laundry'],
-            association: ['community_center', 'local_government_office']
+            commerce: ['store'],
+            restaurant: ['restaurant']
+            // TEST: seulement 2 catégories pour aller vite
+            // artisan: ['plumber', 'electrician', 'locksmith', 'roofing_contractor'],
+            // therapeute: ['spa', 'beauty_salon', 'hair_care', 'physiotherapist'],
+            // service: ['car_repair', 'bank', 'gas_station', 'laundry'],
+            // association: ['community_center', 'local_government_office']
         };
 
         let totalFound = 0;
