--- a/cevennes-connect/evenements.html
+++ b/cevennes-connect/evenements.html
@@ -603,117 +603,25 @@
     </footer>
 
     <script>
-        // Sample events data
-        const eventsData = [
-            {
-                id: 1,
-                title: "Marché de Ganges",
-                category: "marche",
-                date: "2024-12-16",
-                time: "08:00",
-                endTime: "13:00",
-                location: "Place du Marché, Ganges",
-                address: "Place du Marché, 34190 Ganges",
-                price: "Gratuit",
-                description: "Marché traditionnel avec producteurs locaux, fruits, légumes, fromages et spécialités régionales",
-                organizer: "Mairie de Ganges",
-                phone: "04 67 73 85 00",
-                email: "mairie@ganges.fr",
-                lat: 43.9339,
-                lng: 3.7086,
-                image: "https://images.unsplash.com/photo-1488459716781-31db52582fe9?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-            },
-            {
-                id: 2,
-                title: "Festival des Arts de la Rue",
-                category: "festival",
-                date: "2024-12-21",
-                time: "14:00",
-                endTime: "22:00",
-                location: "Centre-ville, Ganges",
-                address: "Centre historique, 34190 Ganges",
-                price: "Gratuit",
-                description: "Spectacles de rue, jongleurs, musiciens et artistes dans les rues du centre historique",
-                organizer: "Association Culturelle Gangeoise",
-                phone: "04 67 73 92 15",
-                email: "culture@ganges-animation.fr",
-                lat: 43.9345,
-                lng: 3.7089,
-                image: "https://images.unsplash.com/photo-1533174072545-7a4b6ad7a6c3?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-            },
-            {
-                id: 3,
-                title: "Atelier Poterie pour Enfants",
-                category: "atelier",
-                date: "2024-12-18",
-                time: "14:00",
-                endTime: "16:30",
-                location: "Atelier Céramique Cévenol",
-                address: "22 avenue des Cévennes, 34190 Ganges",
-                price: "25€ par enfant",
-                description: "Initiation à la poterie pour les enfants de 6 à 12 ans. Matériel fourni, goûter inclus",
-                organizer: "Marie Dupont",
-                phone: "04 67 73 76 28",
-                email: "marie@ceramique-cevenol.fr",
-                lat: 43.9351,
-                lng: 3.7075,
-                image: "https://images.unsplash.com/photo-1578662996442-48f60103fc96?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-            },
-            {
-                id: 4,
-                title: "Randonnée des Cévennes",
-                category: "sport",
-                date: "2024-12-22",
-                time: "09:00",
-                endTime: "16:00",
-                location: "Départ Parking Mairie",
-                address: "Place de la Mairie, 34190 Ganges",
-                price: "5€ adhérents, 8€ non-adhérents",
-                description: "Randonnée de 12km dans les collines cévenoles avec guide. Niveau modéré, prévoir pique-nique",
-                organizer: "Club de Randonnée Gangeois",
-                phone: "04 67 73 88 45",
-                email: "rando@club-ganges.fr",
-                lat: 43.9339,
-                lng: 3.7086,
-                image: "https://images.unsplash.com/photo-1551698618-1dfe5d97d256?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-            },
-            {
-                id: 5,
-                title: "Concert de Jazz",
-                category: "culture",
-                date: "2024-12-19",
-                time: "20:30",
-                endTime: "22:30",
-                location: "Salle des Fêtes",
-                address: "Avenue de la Salle des Fêtes, 34190 Ganges",
-                price: "15€ adultes, 10€ étudiants",
-                description: "Soirée jazz avec le quartet local 'Cévennes Blues'. Ambiance intimiste et chaleureuse",
-                organizer: "Association Musicale de Ganges",
-                phone: "04 67 73 91 22",
-                email: "musique@ganges-culture.fr",
-                lat: 43.9342,
-                lng: 3.7078,
-                image: "https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-            },
-            {
-                id: 6,
-                title: "Marché de Noël",
-                category: "marche",
-                date: "2024-12-23",
-                time: "10:00",
-                endTime: "18:00",
-                location: "Esplanade du Vidourle",
-                address: "Esplanade du Vidourle, 34190 Ganges",
-                price: "Gratuit",
-                description: "Marché de Noël avec artisans locaux, vin chaud, animations pour enfants et visite du Père Noël",
-                organizer: "Comité des Fêtes",
-                phone: "04 67 73 85 00",
-                email: "fetes@ganges-animation.fr",
-                lat: 43.9335,
-                lng: 3.7095,
-                image: "https://images.unsplash.com/photo-1512389142860-9c449e58a543?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+        // Events data - loaded from JSON file
+        let eventsData = [];
+
+        // Load events data from JSON file
+        async function loadEventsData() {
+            try {
+                const response = await fetch('data/events-data.json');
+                eventsData = await response.json();
+                console.log('Events loaded:', eventsData);
+                initializePage();
+            } catch (error) {
+                console.error('Error loading events:', error);
+                eventsData = [];
+                initializePage();
             }
-        ];
+        }
+
+        // Call loadEventsData on page load
+        loadEventsData();
 
         // Variables
         let map;
@@ -721,14 +629,16 @@
         let filteredEvents = [...eventsData];
         let currentDate = new Date();
 
-        // Initialize page
-        document.addEventListener('DOMContentLoaded', function() {
-            initMap();
+        // Removed - initialization now happens after data loads
+
+        // Initialize page after data is loaded
+        function initializePage() {
+            renderCalendar();
             renderEvents();
             setupEventListeners();
             initScrollAnimations();
-            generateCalendar();
-        });
+            initMap();
+        }
 
         // Initialize map
         function initMap() {
@@ -887,7 +797,7 @@
         }
 
         // Generate calendar
-        function generateCalendar() {
+        function renderCalendar() {
             const calendar = document.getElementById('calendar');
             const monthYear = currentDate.toLocaleDateString('fr-FR', { month: 'long', year: 'numeric' });
 
@@ -971,12 +881,12 @@
             // Calendar navigation
             document.getElementById('prevMonth').addEventListener('click', function() {
                 currentDate.setMonth(currentDate.getMonth() - 1);
-                generateCalendar();
+                renderCalendar();
             });
 
             document.getElementById('nextMonth').addEventListener('click', function() {
                 currentDate.setMonth(currentDate.getMonth() + 1);
-                generateCalendar();
+                renderCalendar();
             });
 
             // Les boutons de création sont maintenant des liens directs (plus besoin d'event listener)
