--- a/cevennes-connect/evenements.html
+++ b/cevennes-connect/evenements.html
@@ -801,13 +801,23 @@
             const calendar = document.getElementById('calendar');
             const monthYear = currentDate.toLocaleDateString('fr-FR', { month: 'long', year: 'numeric' });
 
+            // Count events in current month
+            const eventsThisMonth = eventsData.filter(event => {
+                const eventDate = new Date(event.date);
+                return eventDate.getMonth() === currentDate.getMonth() &&
+                       eventDate.getFullYear() === currentDate.getFullYear();
+            }).length;
+
             const firstDay = new Date(currentDate.getFullYear(), currentDate.getMonth(), 1);
             const lastDay = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0);
             const startDate = new Date(firstDay);
             startDate.setDate(startDate.getDate() - firstDay.getDay() + 1);
 
             let calendarHTML = `
-                <div class="text-center font-bold text-lg mb-4 capitalize">${monthYear}</div>
+                <div class="text-center mb-4">
+                    <div class="font-bold text-lg capitalize">${monthYear}</div>
+                    <div class="text-sm text-gray-500 mt-1">${eventsThisMonth} événement(s) ce mois-ci</div>
+                </div>
                 <div class="grid grid-cols-7 gap-1 mb-2">
                     <div class="text-center text-xs font-semibold text-gray-500 py-2">Lun</div>
                     <div class="text-center text-xs font-semibold text-gray-500 py-2">Mar</div>
