Fix: Corrige ID bouton menu mobile dans acteurs-locaux.html

--- a/cevennes-connect/acteurs-locaux.html
+++ b/cevennes-connect/acteurs-locaux.html
@@ -396,7 +396,7 @@
 
     <script>
         // Toggle mobile menu
-        document.getElementById('mobile-menu-button')?.addEventListener('click', function() {
+        document.getElementById('mobile-menu-btn')?.addEventListener('click', function() {
             document.getElementById('mobile-menu').classList.toggle('hidden');
         });
     </script>
