🌐 Config extension Chrome pour production Vercel

--- a/cevennes-connect/chrome-extension/popup.html
+++ b/cevennes-connect/chrome-extension/popup.html
@@ -175,7 +175,7 @@
 
   <div class="card config">
     <label>URL de votre serveur :</label>
-    <input type="text" id="serverUrl" placeholder="http://localhost:3004" value="http://localhost:3004">
+    <input type="text" id="serverUrl" placeholder="https://cevennes-sud-website.vercel.app" value="https://cevennes-sud-website.vercel.app">
   </div>
 
   <div id="eventPreview" class="event-preview" style="display: none;"></div>
