✨ Ajout publication directe depuis extension Chrome
- API /chrome-extension/import-event pour insertion Supabase
- Bouton Publier directement sur le site dans popup
- Workflow: Extraire → Publier → Événement en ligne
- Pas besoin de passer par l'interface admin

--- a/cevennes-connect/chrome-extension/popup.html
+++ b/cevennes-connect/chrome-extension/popup.html
@@ -168,6 +168,9 @@
     <button id="extractBtn" class="btn-primary">
       📥 Extraire cet événement
     </button>
+    <button id="publishBtn" class="btn-primary" style="display: none;">
+      ✅ Publier directement sur le site
+    </button>
     <button id="openAdminBtn" class="btn-secondary">
       🌐 Ouvrir l'interface Admin
     </button>
